--- a/SpringBootSmartThermo/.project
+++ b/SpringBootSmartThermo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>experimental</name>
+	<name>smartcvapp</name>
 	<comment></comment>
 	<projects>
 	</projects>
