--- a/SpringBootSmartThermo/pom.xml
+++ b/SpringBootSmartThermo/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.experiment</groupId>
-	<artifactId>experimental</artifactId>
+	<artifactId>smartcvapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>experimental</name>
+	<name>smartcvapp</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -39,6 +39,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
 	</dependencies>
 
 	<build>
